# coredb

./: Cargo.toml  FINAL_REPORT.md  PERSISTENCE_GUIDE.md  Performance_Test.md  README.md  SUMMARY.md  TEST_RESULTS.md  USAGE_GUIDE.md  benchmark  benchmark.rs  extreme_benchmark  extreme_benchmark.rs  persistent_db.long-type-1048239828231159120.txt  persistent_db.long-type-10797196808123263039.txt  persistent_db.rs  simple_db  simple_db.rs  simple_persistent_db  stress_test  stress_test.rs
data/: db_snapshot.txt
examples/: basic_usage.rs  persistence_example.rs  persistent_demo.rs
src/: compaction.rs  database.rs  error.rs  lib.rs  main.rs  schema.rs  simple_main.rs  wal.rs
src/persistence/: mod.rs  snapshot.rs
src/query/: engine.rs  mod.rs  parser.rs  result.rs
src/storage/: bloom_filter.rs  memtable.rs  mod.rs  sstable.rs
tests/: integration_test.rs
