[package]
name = "coredb"
version = "0.1.0"
edition = "2021"
authors = ["ELFiN Team"]
description = "Single node Cassandra-like database in Rust"

[[bin]]
name = "simple_main"
path = "src/simple_main.rs"

[[bin]]
name = "persistent_db"
path = "persistent_db.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
crossbeam-skiplist = "0.1"
lz4_flex = "0.11"
snap = "1.0"
zstd = "0.13"
bloomfilter = "3.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
async-trait = "0.1"
regex = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = "0.5"

[dev-dependencies]
tokio-test = "0.4"
